Correct Treasurer Emeritus, add email address button for access and welfare officer on committee page

--- a/committee.html
+++ b/committee.html
@@ -213,6 +213,7 @@
                         <h3 class="card-fullname">Isabel Valovin</h3>
                         <p class="card-college"><i> Mansfield College</i></p>
                         <p class="card-text">The Access and Welfare Officer ensures the accessibility, inclusivity and welfare of OSLA and members.</p>
+                        <a href="mailto:accessandwelfare@oxuniliberals.com" class="btn-email">Email: The Access and Welfare Officer</a>
                     </div>
                 </div>
             </div>
@@ -329,11 +330,11 @@
             <!-- The Treasurer Emeritus Card -->
             <div class="col-md-4 mb-4">
                 <div class="card h-100">
-                    <img src="images/committee/treasurer-emeritus.jpg" class="card-img-top" alt="The Treasurer Emeritus" style="object-fit: cover; height: 300px;">
+                    <img src="images/logo.png" class="card-img-top" alt="The Treasurer Emeritus" style="object-fit: cover; height: 300px;">
                     <div class="card-body">
                         <h2 class="card-title">The Treasurer Emeritus</h2>
-                        <h3 class="card-fullname">Will Lawson</h3>
-                        <p class="card-college"><i>Mansfield College</i></p>
+                        <h3 class="card-fullname">Elizabeth Gibson</h3>
+                        <p class="card-college"><i>College of the Great Hall (University College)</i></p>
                         <p class="card-text">The Treasurer Emeritus is the person who has most recently left the office of Treasurer.<p>
                         
                     </div>
