Add image for access and welfare officer for Hilary Term committee

--- a/committee.html
+++ b/committee.html
@@ -207,7 +207,7 @@
             <!-- The Access and Welfare Officer Card -->
             <div class="col-md-4 mb-4">
                 <div class="card h-100">
-                    <img src="images/logo.png" class="card-img-top" alt="The Access and Welfare Officer" style="object-fit: cover; height: 300px;">
+                    <img src="images/committee/acesswelfare.jpeg" class="card-img-top" alt="The Access and Welfare Officer" style="object-fit: cover; height: 300px;">
                     <div class="card-body">
                         <h2 class="card-title">The Access and Welfare Officer</h2>
                         <h3 class="card-fullname">Isabel Valovin</h3>
@@ -230,6 +230,20 @@
                     </div>
                 </div>
             </div>
+
+            <!-- Chief of Staff Card
+            <div class="col-md-4 mb-4">
+                <div class="card h-100">
+                    <img src="images/logo.png" class="card-img-top" alt="The Chief of Staff" style="object-fit: cover; height: 300px;">
+                    <div class="card-body">
+                        <h2 class="card-title">The Chief of Staff</h2>
+                        <h3 class="card-fullname">Liza X</h3>
+                        <p class="card-college"><i>Christ Church</i></p>
+                    </div>
+                </div>
+            </div>
+            <-->
+
 
             
 
