Add social sec profile image for committee page

--- a/committee.html
+++ b/committee.html
@@ -193,7 +193,7 @@
             <!-- The Social Secretary Card -->
             <div class="col-md-4 mb-4">
                 <div class="card h-100">
-                    <img src="images/logo.png" class="card-img-top" alt="The Social Secretary" style="object-fit: cover; height: 300px;">
+                    <img src="images/committee/social-sec.jpg" class="card-img-top" alt="The Social Secretary" style="object-fit: cover; height: 300px;">
                     <div class="card-body">
                         <h2 class="card-title">The Social Secretary</h2>
                         <h3 class="card-fullname">Theo Cunningham</h3>
