Add Chief of Staff to committee page with profile photo

--- a/committee.html
+++ b/committee.html
@@ -231,21 +231,17 @@
                 </div>
             </div>
 
-            <!-- Chief of Staff Card
+            <!-- Chief of Staff Card -->
             <div class="col-md-4 mb-4">
                 <div class="card h-100">
-                    <img src="images/logo.png" class="card-img-top" alt="The Chief of Staff" style="object-fit: cover; height: 300px;">
+                    <img src="images/committee/cos.jpg" class="card-img-top" alt="The Chief of Staff" style="object-fit: cover; height: 300px;">
                     <div class="card-body">
                         <h2 class="card-title">The Chief of Staff</h2>
-                        <h3 class="card-fullname">Liza X</h3>
+                        <h3 class="card-fullname">Liza Barkova</h3>
                         <p class="card-college"><i>Christ Church</i></p>
                     </div>
                 </div>
-            </div>
-            <-->
-
-
-            
+                </div>
 
             <!-- Senior Member Card -->
             <div class="col-md-4 mb-4">
@@ -260,6 +256,8 @@
                 </div>
             </div>
           </div>
+
+        
         </section>
 
 
