Update copyright notice in footer and prepare website for blog launching HT25

--- a/index.html
+++ b/index.html
@@ -63,6 +63,9 @@
                 <a class="navbar-nav nav-link" href="documents.html" style="color: #FAA61A;">Documents</a>
             </li>
             <li class="nav-item">
+              <a class="navbar-nav nav-link" href="blogs.html" style="color: #FAA61A;">Blog</a>
+          </li>
+            <li class="nav-item">
                 <a class="navbar-nav nav-link" href="donate.html" style="color: #FAA61A;">Donate</a>
             </li>
             <li class="nav-item">
@@ -145,6 +148,7 @@
           <li><a href="index.html">Home</a></li>
           <li><a href="join.html">Join</a></li>
           <li><a href="documents.html">Documents</a></li>
+          <li><a href="blogs.html">Blog</a></li>
           <li><a href="committee.html">Committee</a></li>
           <li><a href="events.html">Events</a></li>
           <li><a href="alumni.html">Alumni</a></li>
@@ -167,7 +171,7 @@
       </div>
     </div>
     <div class="footer-bottom">
-      <p>Copyright 2024 - The Oxford Students Liberal Association (OSLA) - Liberal since 1913</p>
+      <p>Copyright 2024, 2025 - The Oxford Students Liberal Association (OSLA) - Liberal since 1913</p>
       <a href="https://www.haydenwilliams.dev/">Website by Hayden Williams</a>
     </div>
   </div>
