--- a/about.html
+++ b/about.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html class="no-js" lang="en">
-  <head>
+<head>
 
     <!--- basic page needs
     ================================================== -->
@@ -61,6 +61,9 @@
                 </li>
             <li class="nav-item">
                 <a class="navbar-nav nav-link" href="documents.html" style="color: #FAA61A;">Documents</a>
+            </li>
+            <li class="nav-item">
+                <a class="navbar-nav nav-link" href="blogs.html" style="color: #FAA61A;">Blog</a>
             </li>
             <li class="nav-item">
                 <a class="navbar-nav nav-link" href="donate.html" style="color: #FAA61A;">Donate</a>
@@ -180,42 +183,43 @@
 <!-- Cloudflare Web Analytics --><script defer src='https://static.cloudflareinsights.com/beacon.min.js' data-cf-beacon='{"token": "07ece4e9475a4cbb92f682afe5f07054"}'></script><!-- End Cloudflare Web Analytics -->
 </body>
 <footer class="site-footer">
-  <div class="container">
-    <div class="footer-content">
-      <div class="footer-logo">
-        <img src="images/logo.svg" alt="OSLA Logo" width="480" height="270">
+    <div class="container">
+      <div class="footer-content">
+        <div class="footer-logo">
+          <img src="images/logo.svg" alt="OSLA Logo" width="480" height="270">
+        </div>
+        <div class="footer-links">
+          <h3>OSLA Quick Links</h3>
+          <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="join.html">Join</a></li>
+            <li><a href="documents.html">Documents</a></li>
+            <li><a href="blogs.html">Blog</a></li>
+            <li><a href="committee.html">Committee</a></li>
+            <li><a href="events.html">Events</a></li>
+            <li><a href="alumni.html">Alumni</a></li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="donate.html">Donate</a></li>
+            <li><a href="contact.html">Contact</a></li>
+          </ul>
+        </div>
+        <div class="footer-social">
+          <h3>Follow OSLA!</h3>
+          <ul>
+            <li><a href="https://x.com/oxunilibdems/"><i class="fab fa-twitter"></i></a></li>
+            <li><a href="https://www.instagram.com/oxuniliberals/"><i class="fab fa-instagram"></i></a></li>
+            <li><a href="https://www.linkedin.com/company/oxford-university-liberal-democrats"><i class="fab fa-linkedin-in"></i></a></li>
+          </ul>
+        </div>
+        <div class="footer-subscribe">
+          <h3><a href="mailing-list.html">Click here to join OSLA's Mailing List</a></h3>
+                  
+        </div>
       </div>
-      <div class="footer-links">
-        <h3>OSLA Quick Links</h3>
-        <ul>
-          <li><a href="index.html">Home</a></li>
-          <li><a href="join.html">Join</a></li>
-          <li><a href="documents.html">Documents</a></li>
-          <li><a href="committee.html">Committee</a></li>
-          <li><a href="events.html">Events</a></li>
-          <li><a href="alumni.html">Alumni</a></li>
-          <li><a href="about.html">About</a></li>
-          <li><a href="donate.html">Donate</a></li>
-          <li><a href="contact.html">Contact</a></li>
-        </ul>
-      </div>
-      <div class="footer-social">
-        <h3>Follow OSLA!</h3>
-        <ul>
-          <li><a href="https://x.com/oxunilibdems/"><i class="fab fa-twitter"></i></a></li>
-          <li><a href="https://www.instagram.com/oxuniliberals/"><i class="fab fa-instagram"></i></a></li>
-          <li><a href="https://www.linkedin.com/company/oxford-university-liberal-democrats"><i class="fab fa-linkedin-in"></i></a></li>
-        </ul>
-      </div>
-      <div class="footer-subscribe">
-        <h3><a href="mailing-list.html">Click here to join OSLA's Mailing List</a></h3>
-                
+      <div class="footer-bottom">
+        <p>Copyright 2024, 2025 - The Oxford Students Liberal Association (OSLA) - Liberal since 1913</p>
+        <a href="https://www.haydenwilliams.dev/">Website by Hayden Williams</a>
       </div>
     </div>
-    <div class="footer-bottom">
-      <p>Copyright 2024 - The Oxford Students Liberal Association (OSLA) - Liberal since 1913</p>
-      <a href="https://www.haydenwilliams.dev/">Website by Hayden Williams</a>
-    </div>
-  </div>
-</footer>
+  </footer>
 </html>
