--- a/contact.html
+++ b/contact.html
@@ -1,83 +1,86 @@
 <!DOCTYPE html>
 <html class="no-js" lang="en">
-  <head>
+<head>
 
-    <!--- basic page needs
-    ================================================== -->
-    <meta charset="utf-8">
-    <title>Oxford Students Liberal Association (OSLA) - Liberal since 1913</title>
-    <meta name="description" content="Oxford Students Liberal Association - Liberal since 1913. Liberalism for Oxford Students.">
-    <meta name="author" content="Hayden Williams">
+  <!--- basic page needs
+  ================================================== -->
+  <meta charset="utf-8">
+  <title>Oxford Students Liberal Association (OSLA) - Liberal since 1913</title>
+  <meta name="description" content="Oxford Students Liberal Association - Liberal since 1913. Liberalism for Oxford Students.">
+  <meta name="author" content="Hayden Williams">
 
-    <!-- mobile specific metas
-    ================================================== -->
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+  <!-- mobile specific metas
+  ================================================== -->
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 
 
-    <!-- Latest compiled and minified CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <!-- Latest compiled and minified CSS -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
 
-    <!-- Latest compiled JavaScript -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script> 
+  <!-- Latest compiled JavaScript -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script> 
 
-    <!-- CSS
-    ================================================== -->
-    <link rel="stylesheet" href="css/base.css">
-    <link rel="stylesheet" href="css/vendor.css">
-    <link rel="stylesheet" href="css/main.css">
+  <!-- CSS
+  ================================================== -->
+  <link rel="stylesheet" href="css/base.css">
+  <link rel="stylesheet" href="css/vendor.css">
+  <link rel="stylesheet" href="css/main.css">
 
-    <!-- script
-    ================================================== -->
-    <script src="js/modernizr.js"></script>
-    <script src="js/pace.min.js"></script>
+  <!-- script
+  ================================================== -->
+  <script src="js/modernizr.js"></script>
+  <script src="js/pace.min.js"></script>
 
-    <!-- favicons
-    ================================================== -->
-    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
-    <link rel="icon" href="favicon.ico" type="image/x-icon">
+  <!-- favicons
+  ================================================== -->
+  <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+  <link rel="icon" href="favicon.ico" type="image/x-icon">
 
-    <!-- Google Fonts
-    ================================================== -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=EB+Garamond:ital,wght@0,400..800;1,400..800&display=swap" rel="stylesheet">
+  <!-- Google Fonts
+  ================================================== -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=EB+Garamond:ital,wght@0,400..800;1,400..800&display=swap" rel="stylesheet">
 
-    <nav class="navbar navbar-expand-sm ld-bg navbar-dark sticky-top">
-        <div class="container-fluid">
-        <a class="navbar-brand" href="index.html"> <img src="images/logo-banner.svg" alt="Homepage" style="width: 480px; height: 270px;"></a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse justify-content-end" id="collapsibleNavbar">
-            <ul class="navbar-nav">
-            <li class="nav-item">
-                <a class="navbar-nav nav-link" href="about.html" style="color: #FAA61A;">About</a>
-            </li>
-            <li class="nav-item">
-                <a class="navbar-nav nav-link" href="committee.html" style="color: #FAA61A;">Committee</a>
-            </li>
-            <li class="nav-item"></li>
-                <a class="navbar-nav nav-link" href="events.html" style="color: #FAA61A;">Events</a>
-                </li>
-            <li class="nav-item">
-                <a class="navbar-nav nav-link" href="documents.html" style="color: #FAA61A;">Documents</a>
-            </li>
-            <li class="nav-item">
-                <a class="navbar-nav nav-link" href="donate.html" style="color: #FAA61A;">Donate</a>
-            </li>
-            <li class="nav-item">
-                <a class="navbar-nav nav-link" href="alumni.html" style="color: #FAA61A;">Alumni</a>
-            </li>
-            <li class="nav-item">
-                <a class="navbar-nav nav-link" href="contact.html" style="color: #FAA61A;">Contact</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link join-us" href="join.html" style="color: #FAA61A;">JOIN</a>
-            </li>
-            </ul>
-        </div>
-        </div>
-    </nav>
+  <nav class="navbar navbar-expand-sm ld-bg navbar-dark sticky-top">
+      <div class="container-fluid">
+      <a class="navbar-brand" href="index.html"> <img src="images/logo-banner.svg" alt="Homepage" style="width: 480px; height: 270px;"></a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
+          <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse justify-content-end" id="collapsibleNavbar">
+          <ul class="navbar-nav">
+          <li class="nav-item">
+              <a class="navbar-nav nav-link" href="about.html" style="color: #FAA61A;">About</a>
+          </li>
+          <li class="nav-item">
+              <a class="navbar-nav nav-link" href="committee.html" style="color: #FAA61A;">Committee</a>
+          </li>
+          <li class="nav-item"></li>
+              <a class="navbar-nav nav-link" href="events.html" style="color: #FAA61A;">Events</a>
+              </li>
+          <li class="nav-item">
+              <a class="navbar-nav nav-link" href="documents.html" style="color: #FAA61A;">Documents</a>
+          </li>
+          <li class="nav-item">
+            <a class="navbar-nav nav-link" href="blogs.html" style="color: #FAA61A;">Blog</a>
+        </li>
+          <li class="nav-item">
+              <a class="navbar-nav nav-link" href="donate.html" style="color: #FAA61A;">Donate</a>
+          </li>
+          <li class="nav-item">
+              <a class="navbar-nav nav-link" href="alumni.html" style="color: #FAA61A;">Alumni</a>
+          </li>
+          <li class="nav-item">
+              <a class="navbar-nav nav-link" href="contact.html" style="color: #FAA61A;">Contact</a>
+          </li>
+          <li class="nav-item">
+              <a class="nav-link join-us" href="join.html" style="color: #FAA61A;">JOIN</a>
+          </li>
+          </ul>
+      </div>
+      </div>
+  </nav>
 </head>
 
 <body>
@@ -146,6 +149,7 @@
           <li><a href="index.html">Home</a></li>
           <li><a href="join.html">Join</a></li>
           <li><a href="documents.html">Documents</a></li>
+          <li><a href="blogs.html">Blog</a></li>
           <li><a href="committee.html">Committee</a></li>
           <li><a href="events.html">Events</a></li>
           <li><a href="alumni.html">Alumni</a></li>
@@ -168,7 +172,7 @@
       </div>
     </div>
     <div class="footer-bottom">
-      <p>Copyright 2024 - The Oxford Students Liberal Association (OSLA) - Liberal since 1913</p>
+      <p>Copyright 2024, 2025 - The Oxford Students Liberal Association (OSLA) - Liberal since 1913</p>
       <a href="https://www.haydenwilliams.dev/">Website by Hayden Williams</a>
     </div>
   </div>
