Smarten-up blogs page and add blogs url

--- a/blogs.html
+++ b/blogs.html
@@ -88,10 +88,10 @@
   <section class="presidents-welcome container my-5">
     <div class="row">
         <div class="col-md-8 mx-auto">
-            <h2>OSLA's Official Blog - COMING SOON</h2>
-            <div class="d-flex align-items-start">
-              <span class="badge bg-success">NEW for Hilary Term 2025</span>
-            </div>
+            <span class="badge bg-success">NEW for Hilary Term 2025</span>
+            <h1>OSLA's Official Blog</h1>
+            <p>'Freedom of the Press' ... now in blog form!</p>
+            <p><a href="https://blog.oxuniliberals.com/" class="btn-goblog" target="_blank">Explore Blog</a></p>
         </div>
     </div>
 </section>
