Add bug warning about blog website to blogs page

--- a/blogs.html
+++ b/blogs.html
@@ -88,6 +88,10 @@
   <section class="presidents-welcome container my-5">
     <div class="row">
         <div class="col-md-8 mx-auto">
+          <div class="alert alert-danger alert-dismissible fade show">
+            <button type="button" class="btn-close" data-bs-dismiss="alert"></button>
+            <strong>Layout Bug [Desktop]<br></strong> The Webmaster is currently reviewing a bug on the desktop version of the blog where the posts are not properly filling-up the entire space; mobile view is unaffected. NOTE: All blogs are still readable even with bug.
+          </div>
             <span class="badge bg-success">NEW for Hilary Term 2025</span>
             <h1>OSLA's Official Blog</h1>
             <p>'Freedom of the Press' ... now in blog form!</p>
