--- a/join.html
+++ b/join.html
@@ -104,7 +104,7 @@
                 <ol>
                     <li>Check Eligibility</li>
                     <li><a href="https://oxford-university-liberal-association.square.site" target="_blank" rel="noopener noreferrer">Click here for the Official OSLA Squarespace Membership Portal.</a> Our standard membership rate is £8.00 per 1 x Oxford University Academic Year (Michaelmas, Hilary, Trinity) OR Life Membership at £15.00 </li>
-                    <li>Submit the form along with the membership fee specified.</li>
+                    <li>Purchase the desired membership tier</li>
                     <li>A member of our Committee will verify your status as a member. You will be sent an email with confirmation- welcome to OSLA!
                 </ol>
                 <p>OSLA only uses '@oxuniliberals.com' email addresses for communications with members. Please check your 'spam' regularly.</p>
