Remove resigned PO from webpage

--- a/committee.html
+++ b/committee.html
@@ -224,11 +224,11 @@
             <!-- Political Officer Card <-->
             <div class="col-md-4 mb-4">
                 <div class="card h-100">
-                    <img src="images/committee/po-mt24.jpg" class="card-img-top" alt="The Political Officer" style="object-fit: cover; height: 300px;">
+                    <img src="images/logo.svg" class="card-img-top" alt="The Political Officer" style="object-fit: cover; height: 300px;">
                     <div class="card-body">
                         <h2 class="card-title">The Political Officer</h2>
-                        <h3 class="card-fullname">Oliver Jones-Lyons</h3>
-                        <p class="card-college"><i>Christ Church</i></p>
+                        <h3 class="card-fullname">Milo Donovan</h3>
+                        <p class="card-college"><i>Lincoln College</i></p>
                         <p class="card-text">The Political Officer is in charge of campaigning, policy and Liberal Democrat party liason for OSLA.</p>
                     </div>
                 </div>
