Update PO to Milo

--- a/committee.html
+++ b/committee.html
@@ -224,7 +224,7 @@
             <!-- Political Officer Card <-->
             <div class="col-md-4 mb-4">
                 <div class="card h-100">
-                    <img src="images/logo.svg" class="card-img-top" alt="The Political Officer" style="object-fit: cover; height: 300px;">
+                    <img src="images/committee/po.jpeg" class="card-img-top" alt="The Political Officer" style="object-fit: cover; height: 300px;">
                     <div class="card-body">
                         <h2 class="card-title">The Political Officer</h2>
                         <h3 class="card-fullname">Milo Donovan</h3>
