Update tag for committee page

--- a/committee.html
+++ b/committee.html
@@ -6,7 +6,7 @@
     ================================================== -->
     <meta charset="utf-8">
     <title>Oxford Students Liberal Association (OSLA) - Liberal since 1913</title>
-    <meta name="description" content="Oxford Students Liberal Association - Liberal since 1913. Liberalism for Oxford Students.">
+    <meta name="description" content="The Committee of the Oxford Students Liberal Association manage and run the Association day-to-day, longer term and future! OSLA - Liberal since 1913. Liberalism for Oxford Students.">
     <meta name="author" content="Hayden Williams">
 
     <!-- mobile specific metas
