Remove latin name from emeritus officer

--- a/committee.html
+++ b/committee.html
@@ -349,7 +349,7 @@
                     <div class="card-body">
                         <h2 class="card-title">The Treasurer Emeritus</h2>
                         <h3 class="card-fullname">Elizabeth Gibson</h3>
-                        <p class="card-college"><i>College of the Great Hall (University College)</i></p>
+                        <p class="card-college"><i>University College</i></p>
                         <p class="card-text">The Treasurer Emeritus is the person who has most recently left the office of Treasurer.<p>
                         
                     </div>
