Remove silly latin college tag from RO card

--- a/committee.html
+++ b/committee.html
@@ -144,7 +144,7 @@
                     <div class="card-body">
                         <h2 class="card-title">The Returning Officer</h2>
                         <h3 class="card-fullname">Julian Wang</h3>
-                        <p class="card-college"><i>College of the Great Hall (University College)</i></p>
+                        <p class="card-college"><i>University College</i></p>
                         <p class="card-text">The Returning Officer (RO)'s primary role is to manage society elections. The RO's secondary role is to interpret the Standing Orders.</p>
                         <a href="mailto:returningofficer@oxuniliberals.com" class="btn-email">Email: The Returning Officer</a>
                     </div>
