Update committee page infos and update access and welfare officer.

--- a/committee.html
+++ b/committee.html
@@ -126,7 +126,7 @@
                         <h2 class="card-title">The Treasurer</h2>
                         <h3 class="card-fullname">Lauren Crabtree</h3>
                         <p class="card-college"><i>Pembroke College</i></p>
-                        <p class="card-text">The Treasurer is responsible for the Society's financial health. The Treasurer works in lock-step with the President and Vice-President to ensure all plans can be financed and scrutinises decisions made.</p>
+                        <p class="card-text">The Treasurer is responsible for the Society's ongoing financial health. The Treasurer works in lock-step with the President and Vice-President to ensure all plans can be financed and scrutinises decisions made.</p>
                     </div>
                 </div>
             </div>
@@ -174,7 +174,7 @@
                         <h2 class="card-title">The Director of Communications</h2>
                         <h3 class="card-fullname">Harry Morgan</h3>
                         <p class="card-college"><i>Pembroke College</i></p>
-                        <p class="card-text">The Director of Communications manages communications and communication strategy for OSLA.</p>
+                        <p class="card-text">The Director of Communications manages communications (including social media) and communication strategy for OSLA.</p>
                     </div>
                 </div>
             </div>
@@ -201,7 +201,7 @@
                         <h2 class="card-title">The Social Secretary</h2>
                         <h3 class="card-fullname">Theo Cunningham</h3>
                         <p class="card-college"><i>St. John's College</i></p>
-                        <p class="card-text">The Social Secretary's role is to run and manage OSLA's social media accounts.</p>
+                        <p class="card-text">The Social Secretary facilitates social apparatus procurement for events of alcoholic and non-alcoholic variety in addition to assisting with the successful running of OSLA events.</p>
                     </div>
                 </div>
             </div>
@@ -210,12 +210,12 @@
             <!-- The Access and Welfare Officer Card -->
             <div class="col-md-4 mb-4">
                 <div class="card h-100">
-                    <img src="images/committee/acesswelfare.jpeg" class="card-img-top" alt="The Access and Welfare Officer" style="object-fit: cover; height: 300px;">
+                    <img src="images/committee/accesswelfare.jpg" class="card-img-top" alt="The Access and Welfare Officer" style="object-fit: cover; height: 300px;">
                     <div class="card-body">
                         <h2 class="card-title">The Access and Welfare Officer</h2>
-                        <h3 class="card-fullname">Isabel Valovin</h3>
-                        <p class="card-college"><i> Mansfield College</i></p>
-                        <p class="card-text">The Access and Welfare Officer ensures the accessibility, inclusivity and welfare of OSLA and members.</p>
+                        <h3 class="card-fullname">Ava Doherty</h3>
+                        <p class="card-college"><i>Brasenose College</i></p>
+                        <p class="card-text">The Access and Welfare Officer ensures the accessibility, inclusivity and welfare of OSLA events for members.</p>
                         <a href="mailto:accessandwelfare@oxuniliberals.com" class="btn-email">Email: The Access and Welfare Officer</a>
                     </div>
                 </div>
@@ -242,6 +242,8 @@
                         <h2 class="card-title">The Chief of Staff</h2>
                         <h3 class="card-fullname">Liza Barkova</h3>
                         <p class="card-college"><i>Christ Church</i></p>
+                        <p class="card-text"> The Chief of Staff assists the Executive and Committee with the running and promotion of OSLA events.</p>
+                    
                     </div>
                 </div>
                 </div>
