Simplify documents page

--- a/documents.html
+++ b/documents.html
@@ -95,12 +95,10 @@
                 <!-- Buttons here -->
                 <div class="d-flex flex-column align-items-center">
                     <button class="btn-email mx-auto" type="button" style="color: #FFFFFF; background-color: #000000;"><a href="https://github.com/Oxford-University-Liberal-Association/documents-archive/tree/main/Documents/Termcards">Termcards</a></button>
-                    <button class="btn-email mx-auto" type="button" style="color: #FFFFFF; background-color: #000000;"><a href="https://github.com/Oxford-University-Liberal-Association/documents-archive/tree/main/Documents/Magazines">Magazines</a></button>
-                    <button class="btn-email mx-auto" type="button" style="color: #FFFFFF; background-color: #000000;"><a href="https://github.com/Oxford-University-Liberal-Association/documents-archive/tree/main/Documents/Constitution%20and%20Standing%20Orders">Constitution, Standing Orders</a></button>
+                    <button class="btn-email mx-auto" type="button" style="color: #FFFFFF; background-color: #000000;"><a href="https://github.com/Oxford-University-Liberal-Association/documents-archive/tree/main/Documents/Constitution%20and%20Standing%20Orders">Governing Documents</a></button>
                     <button class="btn-email mx-auto" type="button" style="color: #FFFFFF; background-color: #000000;"><a href="https://github.com/Oxford-University-Liberal-Association/documents-archive/tree/main/Documents/Minutes">Minutes</a></button>
-                    <button class="btn-email mx-auto" type="button" style="color: #FFFFFF; background-color: #000000;"><a href="https://github.com/Oxford-University-Liberal-Association/documents-archive/tree/main/Documents/Elections">Elections</a></button>
-                    <button class="btn-email mx-auto" type="button" style="color: #FFFFFF; background-color: #000000;"><a href="https://github.com/Oxford-University-Liberal-Association/documents-archive/tree/main/Documents/Honorary%20Officers%20List">Honorary Officers</a></button>
                     <button class="btn-email mx-auto" type="button" style="color: #FFFFFF; background-color: #000000;"><a href="https://github.com/Oxford-University-Liberal-Association/documents-archive/tree/main/Documents/Alumni">Alumni</a></button>
+                    <button class="btn-email mx-auto" type="button" style="color: #FFFFFF; background-color: #000000;"><a href="https://github.com/Oxford-University-Liberal-Association/documents-archive/tree/main/Documents">View More</a></button>
                 </div>
             </div>
         </div>
@@ -109,6 +107,13 @@
             <h2>Would you like to contribute towards our historical archive?</h2>
             <p>If so, please feel free to contact us and we will be happy to add any older documents to our archive from the Association.</p>
         </div>
+
+        <div class="text-center mt-4">
+          <h2>Looking for more information on elections?</h2>
+          <p>If so, please feel free to contact the Returning Officer by <a href="mailto:returningofficer@oxuniliberals.com">clicking here.</a></p>
+      </div>
+
+        
     </section>       
     <hr class="container my-5">
     <!-- preloader
