Update committee page

--- a/committee.html
+++ b/committee.html
@@ -140,10 +140,10 @@
             <!-- Returning Officer Card -->
             <div class="col-md-4 mb-4">
                 <div class="card h-100">
-                    <img src="images/committee/ro-mt24.jpeg" class="card-img-top" alt="The Returning Officer" style="object-fit: cover; height: 300px;">
+                    <img src="images/committee/senior-ex-pres.jpg" class="card-img-top" alt="The Returning Officer" style="object-fit: cover; height: 300px;">
                     <div class="card-body">
                         <h2 class="card-title">The Returning Officer</h2>
-                        <h3 class="card-fullname">Julian Wang</h3>
+                        <h3 class="card-fullname">Zagham Farhan</h3>
                         <p class="card-college"><i>University College</i></p>
                         <p class="card-text">The Returning Officer (RO)'s primary role is to manage society elections. The RO's secondary role is to interpret the Standing Orders.</p>
                         <a href="mailto:returningofficer@oxuniliberals.com" class="btn-email">Email: The Returning Officer</a>
@@ -282,7 +282,7 @@
             </div>
             <div class="col-md-4 mb-4">
                 <div class="card h-100">
-                    <img src="images/committee/president-for-life.jpg" class="card-img-top" alt="President for Life" style="object-fit: cover; height: 300px;">
+                    <img src="images/committee/senior-ex-pres.jpg" class="card-img-top" alt="President for Life" style="object-fit: cover; height: 300px;">
                     <div class="card-body">
                         <h2 class="card-title">The Honorary President</h2>
                         <h3 class="card-fullname">Zagham Farhan</h3>
@@ -347,11 +347,11 @@
             <!-- The Treasurer Emeritus Card -->
             <div class="col-md-4 mb-4">
                 <div class="card h-100">
-                    <img src="images/logo.png" class="card-img-top" alt="The Treasurer Emeritus" style="object-fit: cover; height: 300px;">
+                    <img src="images/logo.svg" class="card-img-top" alt="The Treasurer Emeritus" style="object-fit: cover; height: 300px;">
                     <div class="card-body">
                         <h2 class="card-title">The Treasurer Emeritus</h2>
-                        <h3 class="card-fullname">Elizabeth Gibson</h3>
-                        <p class="card-college"><i>University College</i></p>
+                        <h3 class="card-fullname">Vacant</h3>
+                        <p class="card-college"><i>All Souls' College</i></p>
                         <p class="card-text">The Treasurer Emeritus is the person who has most recently left the office of Treasurer.<p>
                         
                     </div>
@@ -361,11 +361,11 @@
             <!-- Returning Officer Emeritus Card -->
             <div class="col-md-4 mb-4">
                 <div class="card h-100">
-                    <img src="images/committee/ro-emeritus.jpg" class="card-img-top" alt="The Returning Officer Emeritus" style="object-fit: cover; height: 300px;">
+                    <img src="images/committee/ro-emeritus.jpeg" class="card-img-top" alt="The Returning Officer Emeritus" style="object-fit: cover; height: 300px;">
                     <div class="card-body">
                         <h2 class="card-title">The Returning Officer Emeritus</h2>
-                        <h3 class="card-fullname">Oliver Jones-Lyons</h3>
-                        <p class="card-college"><i>Christ Church</i></p>
+                        <h3 class="card-fullname">Julian Wang</h3>
+                        <p class="card-college"><i>University College</i></p>
                         <p class="card-text">The Returning Officer Emeritus is the person who has most recently left the office of Returning Officer.</p>
                     </div>
                 </div>
