Fix accidental double header on 404 page, Update some welcome info for president to Trinity Term

--- a/committee.html
+++ b/committee.html
@@ -88,6 +88,7 @@
     <!-- Committee Members Section -->
     <section class="committee-members container my-5 text-center">
         <span class="badge bg-success">Hilary Term 2025</span>
+        <!-- <span class="badge bg-info">Trinity Term 2025</span> -->
         <h1 class="text-center mb-5">The Executive</h1>
         <div class="row justify-content-center">
             <!-- President Card -->
