--- a/index.html
+++ b/index.html
@@ -102,12 +102,13 @@
                           Throughout this website, fantastically put together by our Webmaster, Hayden Williams, you will find everything you need about our society; from the termly magazine to the membership form - and of course the all-important term card! Members of the Committee are always keen to hear from new and prospective members so feel free to reach out to any one of us.
                         </p>
                         <p>
-                          After our reemergence in Spring of 2024, we have delivered two fantastic term-cards and are incredibly excited for the coming Hilary term. Come and find us at our Liquor and Liberalism social on Wednesdays, or follow our social media for updates on our speaker events, panels, and debates! We're delighted you've found our website, and we hope to see you at one of our events soon.
+                          After our reemergence in Spring of 2024, we have delivered two fantastic term-cards and are incredibly excited for the coming (Summer!) Trinity term. Come and find us at our Liquor and Liberalism social on Wednesdays, or follow our social media for updates on our speaker events, panels, and debates! We're delighted you've found our website, and we hope to see you at one of our events soon.
                         </p>
                         <p class="signoff" style="margin-bottom: 0;">Yours Liberally,</p>
                         <p class="president-signoff" style="font-size: 0.9em; margin-top: 0;">Will Lawson</p>
                         <p class="president-signoff" style="font-size: 0.9em; margin-top: 0;">The President - <i style="font-size: 0.9em;">Mansfield College</i></p>
                         <span class="badge bg-success">Hilary Term 2025</span>
+                        <span class="badge bg-info">Trinity Term 2025</span>
                     </div>
                 </div>
             </div>
