--- a/committee.html
+++ b/committee.html
@@ -227,10 +227,10 @@
                 <div class="card h-100">
                     <img src="images/committee/po.jpeg" class="card-img-top" alt="The Political Officer" style="object-fit: cover; height: 300px;">
                     <div class="card-body">
-                        <h2 class="card-title">The Political Officer</h2>
+                        <h2 class="card-title">"Supreme Chancellor of Hacking"</h2>
                         <h3 class="card-fullname">Milo Donovan</h3>
                         <p class="card-college"><i>Lincoln College</i></p>
-                        <p class="card-text">The Political Officer is in charge of campaigning, policy and Liberal Democrat party liason for OSLA.</p>
+                        <!-- <p class="card-text">"Supreme chancellor"</p> -->
                     </div>
                 </div>
             </div>
