Update social secretary to Joseph Cryan for rest of TT25

--- a/committee.html
+++ b/committee.html
@@ -228,11 +228,11 @@
             <!-- The Social Secretary Card -->
             <div class="col-md-4 mb-4">
                 <div class="card h-100">
-                    <img src="images/logo.svg" class="card-img-top" alt="The Social Secretary" style="object-fit: cover; height: 300px;">
+                    <img src="images/committee/social-sec.jpeg" class="card-img-top" alt="The Social Secretary" style="object-fit: cover; height: 300px;">
                     <div class="card-body">
                         <h2 class="card-title">The Social Secretary</h2>
-                        <h3 class="card-fullname">Vacant</h3>
-                        <p class="card-college"><i>All Souls College</i></p>
+                        <h3 class="card-fullname">Joseph Cryan</h3>
+                        <p class="card-college"><i>New College</i></p>
                         <p class="card-text">The Social Secretary facilitates social apparatus procurement for events of alcoholic and non-alcoholic variety in addition to assisting with the successful running of OSLA events.</p>
                     </div>
                 </div>
@@ -266,7 +266,7 @@
                 </div>
             </div>
 
-             <!-- Political Officer Card <-->
+             <!-- The Presidential Private Secretary Card <-->
              <div class="col-md-4 mb-4">
                 <div class="card h-100">
                     <img src="images/logo.svg" class="card-img-top" alt="The Presidential Private Secretary" style="object-fit: cover; height: 300px;">
