Update director of comms to Thomas Dorey for TT25

--- a/committee.html
+++ b/committee.html
@@ -194,18 +194,14 @@
                 </div>
             </div>
 
-
-             
-            
-
             <!-- The Director of Communications Card -->
             <div class="col-md-4 mb-4">
                 <div class="card h-100">
                     <img src="images/logo.svg" class="card-img-top" alt="The Director of Communications" style="object-fit: cover; height: 300px;">
                     <div class="card-body">
                         <h2 class="card-title">The Director of Communications</h2>
-                        <h3 class="card-fullname">Vacant</h3>
-                        <p class="card-college"><i>All Souls College</i></p>
+                        <h3 class="card-fullname">Thomas Dorey</h3>
+                        <p class="card-college"><i>Oxford Brookes University</i></p>
                         <p class="card-text">The Director of Communications manages communications (including social media) and communication strategy for OSLA.</p>
                     </div>
                 </div>
