Update Director of Comms to Thomas Dorey for TT25

--- a/committee.html
+++ b/committee.html
@@ -197,7 +197,7 @@
             <!-- The Director of Communications Card -->
             <div class="col-md-4 mb-4">
                 <div class="card h-100">
-                    <img src="images/logo.svg" class="card-img-top" alt="The Director of Communications" style="object-fit: cover; height: 300px;">
+                    <img src="images/committee/doc.png" class="card-img-top" alt="The Director of Communications" style="object-fit: cover; height: 300px;">
                     <div class="card-body">
                         <h2 class="card-title">The Director of Communications</h2>
                         <h3 class="card-fullname">Thomas Dorey</h3>
