Add images around website from OSLA events

--- a/contact.html
+++ b/contact.html
@@ -99,11 +99,16 @@
                 <p>The Webmaster is the officer in charge of this website and all OSLA digital infrastructure. Please report all issues with content (e.g. missing pages) or other related queries. <a href="mailto:hayden@haydenwilliams.dev">Email: The Webmaster</a></p>
                 
                 <h1>Targeted Committee Enquiries</h1>
-                <p>For specific queries, for example, regarding the Returning Officer, please visit the Committee page: <a href="committee.html">Click here to visit The Committee page</a></p>
+                <p>For specific queries, for example, regarding the Returning Officer, please visit the Committee page: <a href="committee.html">Click here to visit the Committee page</a></p>
             
             </div>
             <div class="col-md-6">
-                <img src="images/oxford-grad-bg.jpeg" alt="Oxford" class="img-fluid">
+                <figure class="text-center">
+                    <img src="images/events/gladstone_debate.jpeg" alt="The historic Gladstone debate at Oxford University" class="img-fluid">
+                    <figcaption class="mt-3">
+                        <em>The Gladstone Memorial Debate at the Oxford Union with Oxford's political societies in Trinity Term 2025</em>
+                    </figcaption>
+                </figure>
             </div>
         </div>
     </section>
