Update image for publications MT25

--- a/committee.html
+++ b/committee.html
@@ -236,7 +236,7 @@
             <!-- The Publications Officer Card <-->
             <div class="col-md-4 mb-4">
                 <div class="card h-100">
-                    <img src="images/logo.svg" class="card-img-top" alt="The Publications Editor AKA The Blogmaster" style="object-fit: cover; height: 300px;">
+                    <img src="images/committee/publications.jpeg" class="card-img-top" alt="The Publications Editor AKA The Blogmaster" style="object-fit: cover; height: 300px;">
                     <div class="card-body">
                         <h2 class="card-title">The Publications Editor</h2>
                         <h3 class="card-fullname">Robert Turner</h3>
