Update footer with modernisation

--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
       <div class="footer-social">
         <h3>Follow OSLA!</h3>
         <ul>
-          <li><a href="https://x.com/oxunilibdems/"><i class="fab fa-twitter"></i></a></li>
+          <li><a href="https://x.com/oxunilibdems/"><i class="fab fa-x-twitter"></i></a></li>
           <li><a href="https://www.instagram.com/oxuniliberals/"><i class="fab fa-instagram"></i></a></li>
           <li><a href="https://www.linkedin.com/company/oxford-university-liberal-democrats"><i class="fab fa-linkedin-in"></i></a></li>
         </ul>
