--- a/about.html
+++ b/about.html
@@ -242,42 +242,41 @@
 </body>
 <footer class="site-footer">
     <div class="container">
-      <div class="footer-content">
-        <div class="footer-logo">
-          <img src="images/logo.svg" alt="OSLA Logo" width="480" height="270">
+        <!-- Logo centered at the top -->
+        <div class="footer-logo-centered">
+            <a href="index.html">
+                <img src="images/logo.svg" alt="OSLA Logo">
+            </a>
         </div>
-        <div class="footer-links">
-          <h3>OSLA Quick Links</h3>
-          <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="join.html">Join</a></li>
-            <li><a href="documents.html">Documents</a></li>
-            <li><a href="blogs.html">Blog</a></li>
-            <li><a href="committee.html">Committee</a></li>
-            <li><a href="events.html">Events</a></li>
-            <li><a href="alumni.html">Alumni</a></li>
-            <li><a href="about.html">About</a></li>
-            <li><a href="donate.html">Donate</a></li>
-            <li><a href="contact.html">Contact</a></li>
-          </ul>
-        </div>
+
         <div class="footer-social">
-          <h3>Follow OSLA!</h3>
-          <ul>
-            <li><a href="https://x.com/oxunilibdems/"><i class="fab fa-twitter"></i></a></li>
-            <li><a href="https://www.instagram.com/oxuniliberals/"><i class="fab fa-instagram"></i></a></li>
-            <li><a href="https://www.linkedin.com/company/oxford-university-liberal-democrats"><i class="fab fa-linkedin-in"></i></a></li>
-          </ul>
+            <ul>
+                <li><a href="https://www.instagram.com/oxuniliberals/"><i class="fab fa-instagram"></i></a></li>
+                <li><a href="https://www.linkedin.com/company/oxford-university-liberal-democrats"><i class="fab fa-linkedin-in"></i></a></li>
+                <li><a href="https://x.com/oxunilibdems/"><i class="custom-x-icon"></i></a></li>
+            </ul>
         </div>
-        <div class="footer-subscribe">
-          <h3><a href="mailing-list.html">Click here to join OSLA's Mailing List</a></h3>
-                  
+        
+        <!-- Blob-style scattered quick links -->
+        <div class="footer-quicklinks-blob">
+            <a href="index.html">Home</a>
+            <a href="join.html">Join</a>
+            <a href="documents.html">Documents</a>
+            <a href="blogs.html">Blog</a>
+            <a href="committee.html">Committee</a>
+            <a href="events.html">Events</a>
+            <a href="alumni.html">Alumni</a>
+            <a href="about.html">About</a>
+            <a href="donate.html">Donate</a>
+            <a href="mailing-list.html">Mailing List</a>
+            <a href="contact.html">Contact</a>
         </div>
-      </div>
-      <div class="footer-bottom">
-        <p>Copyright 2024, 2025 - The Oxford Students Liberal Association (OSLA) - Liberal since 1913</p>
-        <a href="https://www.haydenwilliams.dev/">Website by Hayden Williams</a>
-      </div>
+        <div class="footer-bottom">
+            <div class="footer-bottom-content">
+                <p>Copyright MMXXV - The Oxford Students Liberal Association (OSLA) - Liberal since 1913</p>
+                <a href="https://www.haydenwilliams.dev/">Website by Hayden Williams</a>
+            </div>
+        </div>
     </div>
-  </footer>
+</footer>
 </html>
