Update blog page on footer

--- a/alumni.html
+++ b/alumni.html
@@ -169,7 +169,7 @@
             <a href="index.html">Home</a>
             <a href="join.html">Join</a>
             <a href="documents.html">Documents</a>
-            <a href="blogs.html">Blog</a>
+            <a href="https://oxuniliberals.com/blog">Blog</a>
             <a href="committee.html">Committee</a>
             <a href="events.html">Events</a>
             <a href="alumni.html">Alumni</a>
