--- a/alumni.html
+++ b/alumni.html
@@ -63,8 +63,8 @@
                 <a class="navbar-nav nav-link" href="documents.html" style="color: #FAA61A;">Documents</a>
             </li>
             <li class="nav-item">
-              <a class="navbar-nav nav-link" href="blogs.html" style="color: #FAA61A;">Blog</a>
-          </li>
+                  <a class="navbar-nav nav-link" href="https://oxuniliberals.com/blog" style="color: #FAA61A;">Blog</a>
+            </li>
             <li class="nav-item">
                 <a class="navbar-nav nav-link" href="donate.html" style="color: #FAA61A;">Donate</a>
             </li>
