--- a/donate.html
+++ b/donate.html
@@ -13,7 +13,6 @@
     ================================================== -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-
     <!-- Latest compiled and minified CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
 
@@ -56,15 +55,15 @@
             <li class="nav-item">
                 <a class="navbar-nav nav-link" href="committee.html" style="color: #FAA61A;">Committee</a>
             </li>
-            <li class="nav-item"></li>
+            <li class="nav-item">
                 <a class="navbar-nav nav-link" href="events.html" style="color: #FAA61A;">Events</a>
                 </li>
             <li class="nav-item">
                 <a class="navbar-nav nav-link" href="documents.html" style="color: #FAA61A;">Documents</a>
             </li>
             <li class="nav-item">
-              <a class="navbar-nav nav-link" href="blogs.html" style="color: #FAA61A;">Blog</a>
-          </li>
+                  <a class="navbar-nav nav-link" href="https://oxuniliberals.com/blog" style="color: #FAA61A;">Blog</a>
+            </li>
             <li class="nav-item">
                 <a class="navbar-nav nav-link" href="donate.html" style="color: #FAA61A;">Donate</a>
             </li>
