--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html class="no-js" lang="en">
   <head>
-
     <!--- basic page needs
     ================================================== -->
     <meta charset="utf-8">
@@ -46,8 +45,6 @@
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
-
-
     <nav class="navbar navbar-expand-sm ld-bg navbar-dark sticky-top">
         <div class="container-fluid">
         <a class="navbar-brand" href="index.html"> <img src="images/logo-banner.svg" alt="Homepage" style="width: 480px; height: 270px;"></a>
@@ -69,8 +66,8 @@
                 <a class="navbar-nav nav-link" href="documents.html" style="color: #FAA61A;">Documents</a>
             </li>
             <li class="nav-item">
-              <a class="navbar-nav nav-link" href="blogs.html" style="color: #FAA61A;">Blog</a>
-          </li>
+                <a class="navbar-nav nav-link" href="https://oxuniliberals.com/blog" style="color: #FAA61A;">Blog</a>
+            </li>
             <li class="nav-item">
                 <a class="navbar-nav nav-link" href="donate.html" style="color: #FAA61A;">Donate</a>
             </li>
