--- a/committee.html
+++ b/committee.html
@@ -241,8 +241,8 @@
                         <h2 class="card-title">The Publications Editor</h2>
                         <h3 class="card-fullname">Robert Turner</h3>
                         <p class="card-college"><i>The Queen's College</i></p>
-                        <a href="https://oxuniliberals.com/submit-article" class="btn-email">Article Submission Form</a>
                         <p class="card-text">Also known as "The Blogmaster", the Publications Editor is responsible for the official OSLA blog (blog.oxuniliberals.com) and any other Association publications.</p>
+                        <a href="https://oxuniliberals.com/submit-article" class="btn-email">Go to: Article Submission Form</a>
                     </div>
                 </div>
             </div>
