Fix deadlink on quick-nav panel on index page

--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
                         </div>
                         
                         <div class="col-md-4 col-sm-6">
-                            <a href="blogs.html" class="quick-nav-item">
+                            <a href="https://blog.oxuniliberals.com/" class="quick-nav-item">
                                 <div class="quick-nav-icon"><i class="fa-solid fa-pen-nib"></i></div>
                                 <h3 class="quick-nav-item-title">Blog</h3>
                                 <p class="quick-nav-item-desc">Read the latest from the NEW 'Freedom of The Press'</p>
